tracing issue to parseStringAsHtml: the android browser has a broken innerHTML parser that ignores link href.  Argh

--- a/examples/hello-css.css
+++ b/examples/hello-css.css
@@ -1,3 +1,3 @@
-h1 {
-    background: blue
+body {
+    background-color: blue
 }
